<?xml version="1.0"?>
<package format="2">
  <name>ocs2_ddp</name>
  <version>0.0.0</version>
  <description>The ocs2_ddp package</description>

  <maintainer email="farbod.farshidian@gmail.com">Farbod Farshidian</maintainer>
  <maintainer email="jcarius@ethz.ch">Jan Carius</maintainer>
  <maintainer email="rgrandia@ethz.ch">Ruben Grandia</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>cmake_clang_tools</build_depend>
  <depend>ocs2_qp_solver</depend>
  <depend>ocs2_core</depend>
  <depend>ocs2_oc</depend>
  <depend>ocs2_mpc</depend>

</package>
