<?xml version="1.0"?>
<package format="2">
  <name>ocs2_doc</name>
  <version>1.0.0</version>
  <description>Documentation for OCS2</description>

  <maintainer email="farbod.farshidian@gmail.com">Farbod Farshidian</maintainer>
  <maintainer email="jcarius@ethz.ch">Jan Carius</maintainer>
  <maintainer email="rgrandia@ethz.ch">Ruben Grandia</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>doxygen</depend>

  <depend>ocs2_core</depend>
  <depend>ocs2_frank_wolfe</depend>
  <depend>ocs2_oc</depend>
  <depend>ocs2_mpc</depend>
  <depend>ocs2_ddp</depend>
  <depend>ocs2_sqp</depend>
  <depend>ocs2_python_interface</depend>
  <depend>ocs2_ros_interfaces</depend>
  <depend>ocs2_robotic_tools</depend>
  <depend>ocs2_robotic_examples</depend>
  <depend>ocs2_pinocchio</depend>

</package>
