<?xml version="1.0"?>
<package format="3">
  <name>ocs2_doc</name>
  <version>1.0.0</version>
  <description>Documentation for OCS2</description>

  <maintainer email="farbod.farshidian@gmail.com">Farbod Farshidian</maintainer>
  <maintainer email="jcarius@ethz.ch">Jan Carius</maintainer>
  <maintainer email="rgrandia@ethz.ch">Ruben Grandia</maintainer>

  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>ocs2_core</exec_depend>
  <exec_depend>ocs2_frank_wolfe</exec_depend>
  <exec_depend>ocs2_oc</exec_depend>
  <exec_depend>ocs2_mpc</exec_depend>
  <exec_depend>ocs2_ddp</exec_depend>
  <exec_depend>ocs2_sqp</exec_depend>
  <exec_depend>ocs2_python_interface</exec_depend>
  <exec_depend>ocs2_ros_interfaces</exec_depend>
  <exec_depend>ocs2_robotic_tools</exec_depend>
  <exec_depend>ocs2_robotic_examples</exec_depend>
  <exec_depend>ocs2_pinocchio</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
