<?xml version="1.0"?>
<package format="3">
  <name>ocs2_ipm</name>
  <version>0.0.0</version>
  <description>The ocs2_ipm package</description>

  <maintainer email="sotaro.katayama@gmail.com">Sotaro Katayama</maintainer>

  <license>BSD-3</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>ocs2_core</depend>
  <depend>ocs2_mpc</depend>
  <depend>ocs2_oc</depend>
  <depend>ocs2_qp_solver</depend>
  <depend>blasfeo_catkin</depend>
  <depend>hpipm_catkin</depend>
  <depend>eigen3_cmake_module</depend>
  <depend>boost</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
